RESOLVED FIXED 272918
REGRESSION(264584@main): Web Extension debug logging is not being logged
https://bugs.webkit.org/show_bug.cgi?id=272918
Summary REGRESSION(264584@main): Web Extension debug logging is not being logged
Timothy Hatcher
Reported 2024-04-18 13:13:09 PDT
We drop debug logs on the floor, they should be logged in debug builds at least.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-18 13:13:21 PDT
Timothy Hatcher
Comment 2 2024-04-18 13:26:24 PDT
EWS
Comment 3 2024-04-18 14:42:32 PDT
Committed 277700@main (8e01542d58ad): <https://commits.webkit.org/277700@main> Reviewed commits have been landed. Closing PR #27466 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.