REGRESSION(264584@main): Web Extension debug logging is not being logged. https://webkit.org/b/272918 rdar://problem/126708221

Reviewed by Per Arne Vollan.

os_log_set_hook takes a minimum log type, so set this to OS_LOG_TYPE_DEBUG for
debug builds. Also only return early for debug and info types in release builds.

This makes sure debug builds get all log message types. While release builds stay
mostly the same as before. However, info logs are now also filtered out, which was
the expected behavior before, but info logs were still getting sent.

* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::registerLogHook):

Canonical link: https://commits.webkit.org/277700@main